Corrects build folder specification

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,5 @@ compatibility_date = "2025-12-26"
 [build]
 command = "bash build.sh"
 
-[build.upload]
-dir = "build/html"
-format = "service-worker"
+[assets]
+directory = "build/html"
